Turn clownmdemu into a static library
This gives me more freedom to share internal structures with the
frontend, avoiding the need for void pointers and dynamic memory
allocation. Maybe someday I'll revisit making this a shared library,
but for now it doesn't really seem feasible.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.20)
 
 project(clownmdemu LANGUAGES C)
 
-add_library(clownmdemu
+add_library(clownmdemu STATIC
 	"clownmdemu.c"
 	"clownmdemu.h"
 	"clowncommon.h"
@@ -22,11 +22,4 @@ set_target_properties(clownmdemu PROPERTIES
 	CXX_STANDARD 98
 	CXX_STANDARD_REQUIRED NO
 	CXX_EXTENSIONS OFF
-
-	PUBLIC_HEADER "clownmdemu.h"
-)
-
-target_include_directories(clownmdemu PUBLIC
-	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
-	"$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
 )
