--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -18,5 +18,10 @@ set_target_properties(clownmdemufrontend PROPERTIES
 add_subdirectory("../" EXCLUDE_FROM_ALL "clownmdemu")
 target_link_libraries(clownmdemufrontend clownmdemu)
 
-find_package(SDL2 REQUIRED)
-target_link_libraries(clownmdemufrontend SDL2::SDL2main SDL2::SDL2)
+find_package(SDL2)
+if(SDL2_FOUND)
+	target_link_libraries(clownmdemufrontend SDL2::SDL2main SDL2::SDL2)
+else()
+	add_subdirectory("SDL" EXCLUDE_FROM_ALL)
+	target_link_libraries(clownmdemufrontend SDL2::SDL2main SDL2::SDL2-static)
+endif()
