Frontend: Add an audio resampler
Previously, the frontend was outputting audio at the PSG's native
200kHz sample rate, and leaving it to SDL2 (or SDL2's underlying
audio backend) to resample it to the native sample rate.

Personally, I don't really trust SDL2 to resample audio, and I wanted
to be able to resample audio myself anyway so that I could make the
frontend play both NTSC and PAL audio without needing to reinitialise
the SDL2 audio device. This new resampler fulfills both of these
needs.

The resampler is a windowed-sinc filter, using a Lanczos window. On
top of performing sample rate conversion, windowed-sinc filters also
eliminate aliasing when downsampling, doubling as low-pass filters.

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -4,6 +4,7 @@ project(clownmdemufrontend LANGUAGES C)
 
 add_executable(clownmdemufrontend WIN32
 	"main.c"
+	"clownresampler.h"
 )
 
 set_target_properties(clownmdemufrontend PROPERTIES
