Frontend: Add file picker

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -5,6 +5,8 @@ project(clownmdemufrontend LANGUAGES C)
 add_executable(clownmdemufrontend WIN32
 	"main.c"
 	"clownresampler.h"
+	"tinyfiledialogs.c"
+	"tinyfiledialogs.h"
 )
 
 set_target_properties(clownmdemufrontend PROPERTIES
@@ -16,13 +18,20 @@ set_target_properties(clownmdemufrontend PROPERTIES
 	CXX_EXTENSIONS OFF
 )
 
+# Link clownmdemu core
 add_subdirectory("../" EXCLUDE_FROM_ALL "clownmdemu")
 target_link_libraries(clownmdemufrontend clownmdemu)
 
+# Link SDL2
 find_package(SDL2)
 if(SDL2_FOUND)
 	target_link_libraries(clownmdemufrontend SDL2::SDL2main SDL2::SDL2)
 else()
 	add_subdirectory("SDL" EXCLUDE_FROM_ALL)
 	target_link_libraries(clownmdemufrontend SDL2::SDL2main SDL2::SDL2-static)
+endif()
+
+# Link some Win32 stuff for tinyfiledialogs
+if(WINDOWS)
+	target_link_libraries(clownmdemufrontend comdlg32 ole32)
 endif()
