Frontend: Convert to C++
I'm going to use Dear ImGui, which is C++, so I need to convert the
frontend to C++.

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(clownmdemufrontend LANGUAGES C)
+project(clownmdemufrontend LANGUAGES C CXX)
 
 add_executable(clownmdemufrontend WIN32
-	"main.c"
+	"main.cpp"
 	"clownresampler.h"
 	"tinyfiledialogs.c"
 	"tinyfiledialogs.h"
