--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -7,6 +7,22 @@ add_executable(clownmdemufrontend WIN32
 	"clownresampler.h"
 	"tinyfiledialogs.c"
 	"tinyfiledialogs.h"
+	"imgui/imconfig.h"
+	"imgui/imgui.cpp"
+	"imgui/imgui.h"
+	"imgui/imgui_demo.cpp"
+	"imgui/imgui_draw.cpp"
+	"imgui/imgui_impl_sdl.cpp"
+	"imgui/imgui_impl_sdl.h"
+	"imgui/imgui_impl_sdlrenderer.cpp"
+	"imgui/imgui_impl_sdlrenderer.h"
+	"imgui/imgui_internal.h"
+	"imgui/imgui_tables.cpp"
+	"imgui/imgui_widgets.cpp"
+	"imgui/imstb_rectpack.h"
+	"imgui/imstb_textedit.h"
+	"imgui/imstb_truetype.h"
+	"frontend.manifest"
 )
 
 set_target_properties(clownmdemufrontend PROPERTIES
