--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -7,6 +7,8 @@ project(clownmdemufrontend LANGUAGES C CXX)
 
 add_executable(clownmdemufrontend WIN32
 	"main.cpp"
+	"error.cpp"
+	"error.h"
 	"clownresampler/clownresampler.h"
 	"tinyfiledialogs.c"
 	"tinyfiledialogs.h"
