Frontend: Split audio code to its own file
Or, well, some of it anyway. I'm not really going to do the whole
encapsulation thing, since this codebase was never really intended to
be all split up like this.

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -7,6 +7,8 @@ project(clownmdemufrontend LANGUAGES C CXX)
 
 add_executable(clownmdemufrontend WIN32
 	"main.cpp"
+	"audio.cpp"
+	"audio.h"
 	"error.cpp"
 	"error.h"
 	"clownresampler/clownresampler.h"
