Frontend: Split the debuggers to their own files

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -9,10 +9,16 @@ add_executable(clownmdemufrontend WIN32
 	"main.cpp"
 	"audio.cpp"
 	"audio.h"
+	"colour.cpp"
+	"colour.h"
 	"error.cpp"
 	"error.h"
 	"video.cpp"
 	"video.h"
+	"debug_psg.cpp"
+	"debug_psg.h"
+	"debug_vdp.cpp"
+	"debug_vdp.h"
 	"clownresampler/clownresampler.h"
 	"tinyfiledialogs.c"
 	"tinyfiledialogs.h"
