Frontend: Change standards to C++11 and C89
Dear ImGui doesn't support C++98 anymore (it never really did in the
first place - it relied on compiler extensions).

Also, since the frontend was converted to C++98, there's no longer
any C99 code in the codebase, so lowered the C standard to C89.

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -58,10 +58,10 @@ if(CLOWNMDEMUFRONTEND_REWINDING)
 endif()
 
 set_target_properties(clownmdemufrontend PROPERTIES
-	C_STANDARD 99
+	C_STANDARD 90
 	C_STANDARD_REQUIRED NO
 	C_EXTENSIONS OFF
-	CXX_STANDARD 98
+	CXX_STANDARD 11 # Dear ImGui requires C++11
 	CXX_STANDARD_REQUIRED NO
 	CXX_EXTENSIONS OFF
 )
