Frontend: Add new font to CMakeLists.txt

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(clownmdemufrontend WIN32
 	"libraries/imgui/imgui_widgets.cpp"
 	"libraries/imgui/imstb_rectpack.h"
 	"libraries/imgui/imstb_textedit.h"
+	"libraries/imgui/inconsolata_regular.h"
 	"libraries/imgui/karla_regular.h"
 	"frontend.manifest"
 )
