Implement accurate FM operator emulation.
Again, based on Nemesis's notes.

http://gendev.spritesmind.net/forum/viewtopic.php?p=6114#p6114

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ add_library(clownmdemu STATIC
 	"error.h"
 	"fm.c"
 	"fm.h"
+	"fm_operator.c"
+	"fm_operator.h"
 	"fm_phase.c"
 	"fm_phase.h"
 	"m68k.c"
