Add FM ADSR envelope support.
Now that the basic YM2612 emulation is mostly done, I need to address
bugs until this thing sounds right. So far, I've fixed a major
oversight in the phase generator's multiplier, but there obviously
other issues to address.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ add_library(clownmdemu STATIC
 	"fm.h"
 	"fm_channel.c"
 	"fm_channel.h"
+	"fm_envelope.c"
+	"fm_envelope.h"
 	"fm_operator.c"
 	"fm_operator.h"
 	"fm_phase.c"
