M68k: Split instruction and opcode handling.
This is in preparation for allowing this code to be shared between
a small handwritten interpreter and an unroll interpreter generator.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ add_library(clownmdemu STATIC
 	"fm_phase.h"
 	"m68k.c"
 	"m68k.h"
+	"m68k/opcode.c"
+	"m68k/opcode.h"
 	"psg.c"
 	"psg.h"
 	"vdp.c"
