--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,47 +58,47 @@ if(CLOWNMDEMU_INSANE_INTEGERS)
 		cc_u16f=unsigned\ long\ long
 		cc_u32f=unsigned\ long\ long
 
-		CC_PRIdLEAST8=\"%%lld\"
-		CC_PRIiLEAST8=\"%%lli\"
-		CC_PRIuLEAST8=\"%%llu\"
-		CC_PRIoLEAST8=\"%%llo\"
-		CC_PRIxLEAST8=\"%%llx\"
-		CC_PRIXLEAST8=\"%%llX\"
+		CC_PRIdLEAST8=\"lld\"
+		CC_PRIiLEAST8=\"lli\"
+		CC_PRIuLEAST8=\"llu\"
+		CC_PRIoLEAST8=\"llo\"
+		CC_PRIxLEAST8=\"llx\"
+		CC_PRIXLEAST8=\"llX\"
 
-		CC_PRIdLEAST16=\"%%lld\"
-		CC_PRIiLEAST16=\"%%lli\"
-		CC_PRIuLEAST16=\"%%llu\"
-		CC_PRIoLEAST16=\"%%llo\"
-		CC_PRIxLEAST16=\"%%llx\"
-		CC_PRIXLEAST16=\"%%llX\"
+		CC_PRIdLEAST16=\"lld\"
+		CC_PRIiLEAST16=\"lli\"
+		CC_PRIuLEAST16=\"llu\"
+		CC_PRIoLEAST16=\"llo\"
+		CC_PRIxLEAST16=\"llx\"
+		CC_PRIXLEAST16=\"llX\"
 
-		CC_PRIdLEAST32=\"%%lld\"
-		CC_PRIiLEAST32=\"%%lli\"
-		CC_PRIuLEAST32=\"%%llu\"
-		CC_PRIoLEAST32=\"%%llo\"
-		CC_PRIxLEAST32=\"%%llx\"
-		CC_PRIXLEAST32=\"%%llX\"
+		CC_PRIdLEAST32=\"lld\"
+		CC_PRIiLEAST32=\"lli\"
+		CC_PRIuLEAST32=\"llu\"
+		CC_PRIoLEAST32=\"llo\"
+		CC_PRIxLEAST32=\"llx\"
+		CC_PRIXLEAST32=\"llX\"
 
-		CC_PRIdFAST8=\"%%lld\"
-		CC_PRIiFAST8=\"%%lli\"
-		CC_PRIuFAST8=\"%%llu\"
-		CC_PRIoFAST8=\"%%llo\"
-		CC_PRIxFAST8=\"%%llx\"
-		CC_PRIXFAST8=\"%%llX\"
+		CC_PRIdFAST8=\"lld\"
+		CC_PRIiFAST8=\"lli\"
+		CC_PRIuFAST8=\"llu\"
+		CC_PRIoFAST8=\"llo\"
+		CC_PRIxFAST8=\"llx\"
+		CC_PRIXFAST8=\"llX\"
 
-		CC_PRIdFAST16=\"%%lld\"
-		CC_PRIiFAST16=\"%%lli\"
-		CC_PRIuFAST16=\"%%llu\"
-		CC_PRIoFAST16=\"%%llo\"
-		CC_PRIxFAST16=\"%%llx\"
-		CC_PRIXFAST16=\"%%llX\"
+		CC_PRIdFAST16=\"lld\"
+		CC_PRIiFAST16=\"lli\"
+		CC_PRIuFAST16=\"llu\"
+		CC_PRIoFAST16=\"llo\"
+		CC_PRIxFAST16=\"llx\"
+		CC_PRIXFAST16=\"llX\"
 
-		CC_PRIdFAST32=\"%%lld\"
-		CC_PRIiFAST32=\"%%lli\"
-		CC_PRIuFAST32=\"%%llu\"
-		CC_PRIoFAST32=\"%%llo\"
-		CC_PRIxFAST32=\"%%llx\"
-		CC_PRIXFAST32=\"%%llX\"
+		CC_PRIdFAST32=\"lld\"
+		CC_PRIiFAST32=\"lli\"
+		CC_PRIuFAST32=\"llu\"
+		CC_PRIoFAST32=\"llo\"
+		CC_PRIxFAST32=\"llx\"
+		CC_PRIXFAST32=\"llX\"
 
 		cc_bool=cc_u8l
 		cc_false=0
