Implement incomplete support for 6-button controllers.
Need to actually implement the 1.5ms timer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ add_library(clownmdemu STATIC
 	"clownmdemu.c"
 	"clownmdemu.h"
 	"clowncommon/clowncommon.h"
+	"controller.c"
+	"controller.h"
 	"error.c"
 	"error.h"
 	"fm.c"
@@ -20,6 +22,8 @@ add_library(clownmdemu STATIC
 	"fm_operator.h"
 	"fm_phase.c"
 	"fm_phase.h"
+	"io_port.c"
+	"io_port.h"
 	"psg.c"
 	"psg.h"
 	"vdp.c"
