--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,16 +14,16 @@ add_library(clownmdemu STATIC
 	"error.h"
 	"fm.c"
 	"fm.h"
-	"fm_channel.c"
-	"fm_channel.h"
-	"fm_envelope.c"
-	"fm_envelope.h"
-	"fm_operator.c"
-	"fm_operator.h"
-	"fm_phase.c"
-	"fm_phase.h"
-	"io_port.c"
-	"io_port.h"
+	"fm-channel.c"
+	"fm-channel.h"
+	"fm-envelope.c"
+	"fm-envelope.h"
+	"fm-operator.c"
+	"fm-operator.h"
+	"fm-phase.c"
+	"fm-phase.h"
+	"io-port.c"
+	"io-port.h"
 	"pcm.c"
 	"pcm.h"
 	"psg.c"
