--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,6 @@ add_library(clownmdemu STATIC
 	"clownmdemu.h"
 	"controller.c"
 	"controller.h"
-	"error.c"
-	"error.h"
 	"fm.c"
 	"fm.h"
 	"fm-channel.c"
@@ -30,6 +28,8 @@ add_library(clownmdemu STATIC
 	"fm-phase.h"
 	"io-port.c"
 	"io-port.h"
+	"log.c"
+	"log.h"
 	"pcm.c"
 	"pcm.h"
 	"psg.c"
