Change the CMake name to 'clownmdemu-core'.
Hopefully, I won't ever have to change it again. I would prefer to
maintain compatibility going forward.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.16.3)
 
 option(CC_USE_C99_INTEGERS "Use C99 integer types instead of the original C89 ones. May save RAM depending on the platform's data model." OFF)
 
-project(clownmdemu LANGUAGES C)
+project(clownmdemu-core LANGUAGES C)
 
-add_library(clownmdemu STATIC
+add_library(clownmdemu-core STATIC
 	"bus-common.c"
 	"bus-common.h"
 	"bus-main-m68k.c"
@@ -40,7 +40,7 @@ add_library(clownmdemu STATIC
 	"z80.h"
 )
 
-set_target_properties(clownmdemu PROPERTIES
+set_target_properties(clownmdemu-core PROPERTIES
 	C_STANDARD 90
 	C_STANDARD_REQUIRED NO
 	C_EXTENSIONS OFF
@@ -48,8 +48,8 @@ set_target_properties(clownmdemu PROPERTIES
 
 add_subdirectory("clown68000" EXCLUDE_FROM_ALL)
 
-target_link_libraries(clownmdemu PRIVATE clown68000-interpreter)
+target_link_libraries(clownmdemu-core PRIVATE clown68000-interpreter)
 
 if(CC_USE_C99_INTEGERS)
-	target_compile_definitions(clownmdemu PUBLIC CC_USE_C99_INTEGERS)
+	target_compile_definitions(clownmdemu-core PUBLIC CC_USE_C99_INTEGERS)
 endif()
